--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,17 @@
 
 <body>
     <h1>Url Shortener API</h1>
-    <p>Node.js &amp; Express.js example url shortener api.</p>
+    <h2>Node.js, Express.js &amp; MongoDB example url shortener api.</h2>
+    <p><strong>Sample POST request: </strong><span class="baseurl"></span>/api?url=http://codepen.io/hallowed</p>
+    <p><strong>Example JSON response: </strong>{"originalUrl":"http://codepen.io/hallowed","shortUrl":"<span class="baseurl"></span>/a"}</p>
+    <p><strong>Usage:</strong> <span class="baseurl"></span>/a <br>will redirect to http://codepen.io/hallowed</p>
+    <script>
+        var baseUrl = window.location.origin;
+        var elements = document.getElementsByClassName("baseurl");
+        for (var i = 0; i < elements.length; i++) {
+            elements[i].innerHTML = baseUrl;
+        }
+    </script>
 </body>
 
 </html>
