--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,43 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Url shortener API</title>
     <meta name="description" content="Url Shortener API">
     <meta name="author" content="Deyan Vladkov">
+    <title>Url shortener API</title>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" defer></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" defer></script>
+    
+    <link rel="stylesheet" href="/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-    <h1>Url Shortener API</h1>
-    <h2>Node.js, Express.js &amp; MongoDB example url shortener api.</h2>
-    <p><strong>Sample POST request: </strong><span class="baseurl"></span>/api?url=http://codepen.io/hallowed</p>
-    <p><strong>Example JSON response: </strong>{"originalUrl":"http://codepen.io/hallowed","shortUrl":"<span class="baseurl"></span>/a"}</p>
-    <p><strong>Usage:</strong> <span class="baseurl"></span>/a <br>will redirect to http://codepen.io/hallowed</p>
-    <script>
-        var baseUrl = window.location.origin;
-        var elements = document.getElementsByClassName("baseurl");
-        for (var i = 0; i < elements.length; i++) {
-            elements[i].innerHTML = baseUrl;
-        }
-    </script>
+    <h1>Url shortener</h1>
+    <a href="/api"><button>Use API</button></a>
+
+    <div class="row">
+        <div class="col col-md-2"></div>
+        <div class="col col-md-8">
+            <form action="/api/:url?" method="post">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Shorten url" name="shorten" minlength="2">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-scissors"></i></button>
+                    </div>
+                </div>
+
+                <br>
+                <div class="row text-center">
+                    <button class="btn btn-default btn-lg" type="submit">Shorten</button>
+                </div>
+
+            </form>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
