--- a/public/index.html
+++ b/public/index.html
@@ -6,39 +6,117 @@
     <meta name="description" content="Url Shortener API">
     <meta name="author" content="Deyan Vladkov">
     <title>Url shortener API</title>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" defer></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" defer></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js" defer></script>
     <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-    <h1>Url shortener</h1>
-    <a href="/api"><button>Use API</button></a>
-
-    <div class="row">
-        <div class="col col-md-2"></div>
-        <div class="col col-md-8">
-            <form action="/api/:url?" method="post">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Shorten url" name="shorten" minlength="2">
-                    <div class="input-group-btn">
-                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-scissors"></i></button>
+    <div class="container">
+        <div class="row text-center">
+            <h1>URL shortener</h1>
+            <a href="/api"><button>Use API</button></a>
+        </div><br>
+        <div class="row text-center">
+            <div class="col">
+                <!--<form id="shorten-form" action="/api" method="post"> -->
+                <form id="shorten-form">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Shorten url" value="http://" name="url" minlength="4">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-scissors"></i></button>
+                        </div>
                     </div>
-                </div>
-
-                <br>
-                <div class="row text-center">
-                    <button class="btn btn-default btn-lg" type="submit">Shorten</button>
-                </div>
-
-            </form>
+                    <br>
+                    <div class="row text-center">
+                        <button class="btn btn-default btn-lg" type="submit">Shorten</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
+    <script>
+        $(document).ready(function() {
+            $.validator.setDefaults({
+                submitHandler: function(form) {
+                    var url = $(form).find('input[name="url"]').val();
+                    console.log("URL", url);
+                    shortenUrl(url);
+                }
+            });           
+
+            $.validator.addMethod("validUrl", function(value, element) {                
+                var re = /^(?:(?:https?|ftp):\/\/)(?:\S+(?::\S*)?@)?(?:(?!(?:10|127)(?:\.\d{1,3}){3})(?!(?:169\.254|192\.168)(?:\.\d{1,3}){2})(?!172\.(?:1[6-9]|2\d|3[0-1])(?:\.\d{1,3}){2})(?:[1-9]\d?|1\d\d|2[01]\d|22[0-3])(?:\.(?:1?\d{1,2}|2[0-4]\d|25[0-5])){2}(?:\.(?:[1-9]\d?|1\d\d|2[0-4]\d|25[0-4]))|(?:(?:[a-z\u00a1-\uffff0-9]-*)*[a-z\u00a1-\uffff0-9]+)(?:\.(?:[a-z\u00a1-\uffff0-9]-*)*[a-z\u00a1-\uffff0-9]+)*(?:\.(?:[a-z\u00a1-\uffff]{2,}))\.?)(?::\d{2,5})?(?:[/?#]\S*)?$/i;
+                return this.optional(element) || re.test(value);
+            });
+
+            $("#shorten-form").on("submit", function(event) {
+                event.preventDefault();
+            });
+
+            $("#shorten-form").validate({
+                rules: {
+                    url: {
+                        required: true,
+                        minlength: 4,
+                        maxlength: 2000,
+                        validUrl: true
+                    }
+                },
+                messages: {
+                    url: {
+                        required: "Please provide a password",
+                        minlength: "Your password must be at least 8 characters long",
+                        maxlength: "Your password must be at under 2000 characters long",
+                        validUrl: "The URL must start with http:// https:// Please enter a valid url like http://example.com"
+                    }
+                },
+                errorElement: "em",
+                errorPlacement: function(error, element) {
+                    error.addClass("help-block");
+                    error.insertAfter(element);
+                },
+                highlight: function(element, errorClass, validClass) {
+                    $(element).parents(".col-md-4").addClass("has-error").removeClass("has-success");
+                },
+                unhighlight: function(element, errorClass, validClass) {
+                    $(element).parents(".col-md-4").addClass("has-success").removeClass("has-error");
+                }
+            });
+        });
+
+    </script>
+
+    <script>
+        function shortenUrl(url) {
+            console.log(url);
+            var url = window.location.origin + '/api?url=' + url;
+            console.log("url to post", url);
+
+            $.ajax({
+                url: url,
+                type: 'POST',
+                success: function(result) {
+                    if (!result.error) {
+                        // $("#result-box").toggleClass("invisible");
+                        // $("#status-message").css('border', '1px solid green');
+                        // $("#shorten-form").trigger('reset');
+                        //  displayStatusMessage(result.message);
+                        console.log(result, "success");
+                    } else {
+                        console.log(result, 'invalid url');
+                        // $("#shorten-message").css('border', '1px solid red');
+                        // displayStatusMessage(result.message);
+                    }
+                }
+            }, 'json');
+        }
+
+    </script>
 
 </body>
 
