--- a/public/api.html
+++ b/public/api.html
@@ -6,27 +6,29 @@
     <meta name="description" content="Url shortener API">
     <meta name="author" content="Deyan Vladkov">
     <title>Url shortener API</title>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" defer></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" defer></script>
-    <link rel="stylesheet" href="/css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Mina" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Url Shortener API</h1>
-        <p><strong>Sample POST request: </strong><span class="baseurl"></span>/api?url=https://github.com/DeVlad</p>
-        <p><strong>Example JSON response: </strong>{"originalUrl":"https://github.com/DeVlad","shortUrl":"<span class="baseurl"></span>/a"}</p>
-        <p><strong>Usage:</strong> <span class="baseurl"></span>/a <br>will redirect to https://github.com/DeVlad</p>
-        <script>
-            var baseUrl = window.location.origin;
-            var elements = document.getElementsByClassName("baseurl");
-            for (var i = 0; i < elements.length; i++) {
-                elements[i].innerHTML = baseUrl;
-            }
+    <div class="jumbotron d-flex align-items-center transparent">
+        <div class="container">
+            <h1 class="text-center">Url Shortener <br>API</h1>
+            <p><strong>Sample POST request: </strong><span class="baseurl"></span>/api?url=https://github.com/DeVlad</p>
+            <p><strong>Example JSON response: </strong>{originalUrl: "https://github.com/DeVlad", shortUrl: "<span class="baseurl"></span>/a"}</p>
+            <p><strong>Usage:</strong> <span class="baseurl"></span>/a <br>will redirect to https://github.com/DeVlad</p>
+            <script>
+                var baseUrl = window.location.origin;
+                var elements = document.getElementsByClassName("baseurl");
+                for (var i = 0; i < elements.length; i++) {
+                    elements[i].innerHTML = baseUrl;
+                }
 
-        </script>
+            </script>
+            <a href="index.html"><button type="button" id="btn-shorten" class="btn btn-primary btn-lg" href="index.html" type="submit">Shorten</button></a>
+        </div>
     </div>
 </body>
 
