--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js" defer></script>
+    <link href="https://fonts.googleapis.com/css?family=Mina" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -17,8 +18,8 @@
 <body>
     <div class="container">
         <div class="row text-center">
-            <h1>URL shortener</h1>
-            <a href="/api"><button>Use API</button></a>
+            <h1>URL <br> Shortener</h1>
+            <a href="/api"><button class="btn btn-default">Use API</button></a>
         </div><br>
         <div class="row text-center">
             <div class="col">
@@ -32,13 +33,12 @@
                     </div>
                     <br>
                     <div class="row text-center">
-                        <button class="btn btn-default btn-lg" type="submit">Shorten</button>
+                        <button id="btn-shorten" class="btn btn-default btn-lg" type="submit">Shorten</button>
                     </div>
-                </form>                
+                </form>
             </div>
-        </div>
-        
-            <p id="shortened">?</p>
+        </div>        
+            <p id="shortened" class="transparent"></p>
        
     </div>    
 
