Added copy shortened url button

--- a/public/api.html
+++ b/public/api.html
@@ -16,9 +16,9 @@
     <div class="jumbotron d-flex align-items-center transparent">
         <div class="container">
             <h1 class="text-center">Url Shortener <br>API</h1>
-            <p><strong>Sample POST request: </strong><span class="baseurl"></span>/api?url=https://github.com/DeVlad</p>
-            <p><strong>Example JSON response: </strong>{originalUrl: "https://github.com/DeVlad", shortUrl: "<span class="baseurl"></span>/a"}</p>
-            <p><strong>Usage:</strong> <span class="baseurl"></span>/a <br>will redirect to https://github.com/DeVlad</p>
+            <p><strong>Sample POST request: </strong><span class="baseurl"></span>/api?url=http://www.example.com/</p>
+            <p><strong>Example JSON response: </strong>{originalUrl: "http://www.example.com/", shortUrl: "<span class="baseurl"></span>/a"}</p>
+            <p><strong>Usage:</strong> <span class="baseurl"></span>/a <br>will redirect to http://example.com/</p>
             <script>
                 var baseUrl = window.location.origin;
                 var elements = document.getElementsByClassName("baseurl");
